@@ -479,6 +479,7 @@ Release 0.21.0 - Unreleased
    HBASE-2919  initTableReducerJob: Unused method parameter
                (Libor Dener via Stack)
    HBASE-2923  Deadlock between HRegion.internalFlushCache and close
+   HBASE-2927  BaseScanner gets stale HRegionInfo in some race cases
 
   IMPROVEMENTS
    HBASE-1760  Cleanup TODOs in HTable
